# flu-ha-mhcii-usage-trees

./: .gitignore  CLAUDE.md  LICENSE  README.md  Snakefile  config.yaml  environment.yaml  pyproject.toml
auspice/: flu-ha-mhcii-usage-trees_H1-compact.json  flu-ha-mhcii-usage-trees_H1-with-titers.json  flu-ha-mhcii-usage-trees_H1.json  flu-ha-mhcii-usage-trees_H2-compact.json  flu-ha-mhcii-usage-trees_H2-with-titers.json  flu-ha-mhcii-usage-trees_H2.json  flu-ha-mhcii-usage-trees_H3-compact.json  flu-ha-mhcii-usage-trees_H3-with-titers.json  flu-ha-mhcii-usage-trees_H3.json  flu-ha-mhcii-usage-trees_H5-compact.json  flu-ha-mhcii-usage-trees_H5-with-titers.json  flu-ha-mhcii-usage-trees_H5.json  flu-ha-mhcii-usage-trees_H7-compact.json  flu-ha-mhcii-usage-trees_H7.json  flu-ha-trees-mhcII-binding_H1.json  flu-ha-trees-mhcII-binding_H2.json  flu-ha-trees-mhcII-binding_H3.json  flu-ha-trees-mhcII-binding_H5-with-titers.json  flu-ha-trees-mhcII-binding_H5.json  flu-ha-trees-mhcII-binding_H7.json
data/: README.md  auspice_config.json  build_protein_sites_and_mutation_effects.py  build_protein_sites_and_mutation_effects_alignment.fa  build_protein_sites_and_mutation_effects_config.yaml  build_protein_sites_and_mutation_effects_protein_identities.txt  description.md  strain_token_host_map.tsv
scripts/: annotate_host_taxonomy.py  annotate_strains.py  build_include_file.py  collapse_host_order.py  extract_ha_cds.py  generate_phenotype_auspice_config.py  infer_missing_host.py  merge_manual_add.py  parse_refine_outliers.py  prune_auspice_json.py  score_mutation_effects.py  (+1 more)
(+118 files in other folders)
