[project]
name = ""flu-ha-trees-mhcII-binding
version = "0.1"
description = "Phylogenetic trees of influenza hemagglutinin labeled by MHC II binding"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bloom Lab", email = "jbloom@fredhutch.org"}
]
requires-python = ">=3.13"

[project.urls]
Homepage = ""https://github.com/jbloomlab/flu-ha-trees-mhcII-binding"
Repository = ""https://github.com/jbloomlab/flu-ha-trees-mhcII-binding"
Issues = "https://github.com/jbloomlab/flu-ha-trees-mhcII-binding/issues"

[tool.ruff]
builtins = [
    "snakemake",  # may appear undefined as passed to scripts via `Snakefile`
]
