[project]
name = "flu-ha-mhcii-usage-trees"
version = "0.1"
description = "Phylogenetic trees of influenza hemagglutinin annotated by MHC II binding"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bloom Lab", email = "jbloom@fredhutch.org"}
]
requires-python = ">=3.13"

[project.urls]
Homepage = "https://github.com/jbloomlab/flu-ha-mhcii-usage-trees"
Repository = "https://github.com/jbloomlab/flu-ha-mhcii-usage-trees"
Issues = "https://github.com/jbloomlab/flu-ha-mhcii-usage-trees/issues"

[tool.ruff]
builtins = [
    "snakemake",  # may appear undefined as passed to scripts via `Snakefile`
]
